--- a/Articles/SFC/refs.bib
+++ b/Articles/SFC/refs.bib
@@ -3703,7 +3703,7 @@
 
 @phdthesis{teixeira_crescimento_2015,
   address =	 {Rio de Janeiro},
-  type =	 {Tese ({Doutorado})},
+  type =	 {PhD Dissertation},
   title =	 {Crescimento liderado pela demanda na economia
                   norte-americana nos anos 2000: uma análise a partir
                   do supermultiplicador sraffiano com inflação de
@@ -4276,14 +4276,14 @@
 
 @phdthesis{petrini_demanda_2019,
   address =	 {Campinas},
-  type =	 {Dissertação ({Mestrado})},
+  type =	 {Masters Thesis},
   title =	 {Demanda {Efetiva} no médio prazo: investimento
                   residencial, bolha de ativos em uma abordagem
                   {Stock}-{Flow} {Consistent} com {Supermultiplicador}
                   {Sraffiano}},
   school =	 {Unicamp},
   author =	 {Petrini, Gabriel},
-  year =	 2019,
+  year =	 2020,
   note =	 {Em desenvolvimento}
 }
 
