--- a/Articles/SFC/tabs/sobol.tex
+++ b/Articles/SFC/tabs/sobol.tex
@@ -4,16 +4,16 @@
 \begin{tabular}{llrl}
 \toprule
 Parameter &                     Description &  Instability inducing value & Effect of increase \\
-              &                                 &                             &                    \\
+           &                                 &                             &                    \\
 \midrule
-$\gamma_u$    &                Adjustment speed &                        0.65 &      Destabilizing \\
-$\omega$      &                      wage-share &                           - &        Stabilizing \\
-$\gamma_F$    &      Profit distribution policy &                           - &      Destabilizing \\
-$\sigma_{mo}$ &                 Mortgage spread &                           - &        Stabilizing \\
-$\phi_0$      &  $g_{I_Z}$ autonomous component &                        0.32 &      Destabilizing \\
-$\phi_1$      &     own interest rate parameter &                           - &      Destabilizing \\
-$\pi$         &           real estate inflation &                           - &      Destabilizing \\
-$R$           &              $C_k$ share on $Z$ &                        0.91 &        Stabilizing \\
+$\gamma_u$ &                Adjustment speed &                        0.65 &      Destabilizing \\
+$\omega$   &                      wage-share &                           - &        Stabilizing \\
+$\gamma_F$ &      Profit distribution policy &                           - &      Destabilizing \\
+$rm$       &          Deposits interest rate &                           - &        Stabilizing \\
+$\phi_0$   &  $g_{I_h}$ autonomous component &                        0.32 &      Destabilizing \\
+$\phi_1$   &     own interest rate parameter &                           - &      Destabilizing \\
+$\pi$      &           real estate inflation &                           - &      Destabilizing \\
+$R$        &              $C_k$ share on $Z$ &                        0.91 &        Stabilizing \\
 \bottomrule
 \end{tabular}
 \end{table}
